--- a/portf.html
+++ b/portf.html
@@ -178,7 +178,7 @@
                       <h4>Beetle</h4>		      
                       <!-- <p>.</p> -->
 
-                      <div class="categories">Grapic Design</div>			               
+                      <div class="categories">Graphic Design</div>			               
                    </div>
 
                  <div class="link-box">
@@ -242,7 +242,7 @@
                    </div>
 
                  <div class="link-box">
-                    <a href="http://www.ericowazi.github.io/portfolio">Details</a>
+                    <a href="ericowazi.github.io/portfolio">Details</a>
                       <a href="#" class="popup-modal-dismiss">Close</a>
                  </div>		      
 
@@ -282,7 +282,7 @@
                    </div>
 
                  <div class="link-box">
-                    <a href="http://www.ericowazi.github.io/FXPipsers">Details</a>
+                    <a href="ericowazi.github.io/FXPipsers">Details</a>
                       <a href="#" class="popup-modal-dismiss">Close</a>
                  </div>		      
 
